tests/ui/typeck/issue-104510-ice.stderr
error[E0412]: cannot find type `Oops` in this scope
  --> $DIR/issue-104510-ice.rs:4:21
   |
LL | struct W<T: ?Sized>(Oops);
   |                     ^^^^ not found in this scope

error[E0282]: type annotations needed for `*const W<T>`
  --> $DIR/issue-104510-ice.rs:9:9
   |
LL |     let pointer = &j as *const _;
   |         ^^^^^^^
   |
help: consider giving `pointer` an explicit type, where the type for type parameter `T` is specified
   |
LL |     let pointer: *const W<T> = &j as *const _;
   |                +++++++++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0412.
For more information about an error, try `rustc --explain E0282`.
